@@ -53,6 +53,7 @@ using namespace arangodb::aql;
 using namespace arangodb::consensus;
 using namespace arangodb::velocypack;
 using namespace arangodb::rest;
+using namespace arangodb::basics;
 
 /// Constructor:
 State::State()
@@ -284,43 +285,38 @@ index_t State::logNonBlocking(index_t idx, velocypack::Slice const& slice,
     : persist(idx, term, millis, slice, clientId);
 
   if (!success) {  // log to disk or die
-    if (leading) {
+    LOG_TOPIC(FATAL, Logger::AGENCY)
+        << "RAFT member fails to persist log entries!";
+    FATAL_ERROR_EXIT();
+  }
+
+  logEmplaceBackNoLock(log_t(idx, term, buf, clientId));
+
+  return _log.back().index;
+}
+
+
+void State::logEmplaceBackNoLock(log_t&& l) {
+
+  if (!l.clientId.empty()) {
+    try {
+      _clientIdLookupTable.emplace(  // keep track of client or die
+        std::pair<std::string, index_t>{l.clientId, l.index});
+    } catch (...) {
       LOG_TOPIC(FATAL, Logger::AGENCY)
-          << "RAFT leader fails to persist log entries!";
+        << "RAFT member fails to expand client lookup table!";
       FATAL_ERROR_EXIT();
-    } else {
-      LOG_TOPIC(ERR, Logger::AGENCY)
-          << "RAFT follower fails to persist log entries!";
-      return 0;
     }
   }
 
   try {
-    _log.push_back(log_t(idx, term, buf, clientId));  // log to RAM or die
+    _log.emplace_back(std::forward<log_t>(l));  // log to RAM or die
   } catch (std::bad_alloc const&) {
-    if (leading) {
-      LOG_TOPIC(FATAL, Logger::AGENCY)
-          << "RAFT leader fails to allocate volatile log entries!";
-      FATAL_ERROR_EXIT();
-    } else {
-      LOG_TOPIC(ERR, Logger::AGENCY)
-          << "RAFT follower fails to allocate volatile log entries!";
-      return 0;
-    }
+    LOG_TOPIC(FATAL, Logger::AGENCY)
+      << "RAFT member fails to allocate volatile log entries!";
+    FATAL_ERROR_EXIT();
   }
 
-  if (leading) {
-    try {
-      _clientIdLookupTable.emplace(  // keep track of client or die
-          std::pair<std::string, index_t>(clientId, idx));
-    } catch (...) {
-      LOG_TOPIC(FATAL, Logger::AGENCY)
-          << "RAFT leader fails to expand client lookup table!";
-      FATAL_ERROR_EXIT();
-    }
-  }
-
-  return _log.back().index;
 }
 
 /// Log transactions (follower)
@@ -498,11 +494,11 @@ size_t State::removeConflicts(query_t const& transactions, bool gotSnapshot) {
 
         // volatile logs, as mentioned above, this will never make _log
         // completely empty!
-        _log.erase(_log.begin() + pos, _log.end());
+        logEraseNoLock(_log.begin() + pos, _log.end());
 
-        LOG_TOPIC(TRACE, Logger::AGENCY) << "removeConflicts done: ndups=" << ndups
-                                         << " first log entry: " << _log.front().index
-                                         << " last log entry: " << _log.back().index;
+        LOG_TOPIC(TRACE, Logger::AGENCY)
+          << "removeConflicts done: ndups=" << ndups << " first log entry: "
+          << _log.front().index << " last log entry: " << _log.back().index;
 
         break;
       } else {
@@ -515,6 +511,29 @@ size_t State::removeConflicts(query_t const& transactions, bool gotSnapshot) {
 
   return ndups;
 }
+
+
+void State::logEraseNoLock(
+  std::deque<log_t>::iterator rbegin, std::deque<log_t>::iterator rend) {
+
+  for (auto lit = rbegin; lit != rend; lit++) {
+    std::string const& clientId = lit->clientId;
+    if (!clientId.empty()) {
+      auto ret = _clientIdLookupTable.equal_range(clientId);
+      for (auto it = ret.first; it != ret.second;) {
+        if (it->second == lit->index) {
+          it = _clientIdLookupTable.erase(it);
+        } else {
+          it++;
+        }
+      }
+    }
+  }
+
+  _log.erase(rbegin, rend);
+
+}
+
 
 /// Get log entries from indices "start" to "end"
 std::vector<log_t> State::get(index_t start, index_t end) const {
@@ -748,7 +767,7 @@ bool State::loadCollections(TRI_vocbase_t* vocbase,
       std::shared_ptr<Buffer<uint8_t>> buf = std::make_shared<Buffer<uint8_t>>();
       VPackSlice value = arangodb::velocypack::Slice::emptyObjectSlice();
       buf->append(value.startAs<char const>(), value.byteSize());
-      _log.push_back(log_t(index_t(0), term_t(0), buf, std::string()));
+      _log.emplace_back(log_t(index_t(0), term_t(0), buf, std::string()));
       persist(0, 0, 0, value, std::string());
     }
     _ready = true;
@@ -810,7 +829,7 @@ bool State::loadLastCompactedSnapshot(Store& store, index_t& index, term_t& term
       VPackSlice ii = i.resolveExternals();
       try {
         store = ii;
-        index = basics::StringUtils::uint64(ii.get("_key").copyString());
+        index = StringUtils::uint64(ii.get("_key").copyString());
         term = ii.get("term").getNumber<uint64_t>();
         return true;
       } catch (std::exception const& e) {
@@ -862,8 +881,9 @@ bool State::loadCompacted() {
     buffer_t tmp = std::make_shared<arangodb::velocypack::Buffer<uint8_t>>();
     _agent->setPersistedState(ii);
     try {
-      _cur = basics::StringUtils::uint64(ii.get("_key").copyString());
+      _cur = StringUtils::uint64(ii.get("_key").copyString());
       _log.clear();  // will be filled in loadRemaining
+      _clientIdLookupTable.clear();
       // Schedule next compaction:
       _lastCompactionAt = _cur;
       _nextCompactionAfter = _cur + _agent->config().compactionStepSize();
@@ -1021,7 +1041,7 @@ bool State::loadRemaining() {
                                         : std::string();
 
       // Dummy fill missing entries (Not good at all.)
-      index_t index(basics::StringUtils::uint64(ii.get(StaticStrings::KeyString).copyString()));
+      index_t index(StringUtils::uint64(ii.get(StaticStrings::KeyString).copyString()));
 
       // Ignore log entries, which are older than lastIndex:
       if (index >= lastIndex) {
@@ -1033,7 +1053,9 @@ bool State::loadRemaining() {
           term_t term(ii.get("term").getNumber<uint64_t>());
           for (index_t i = lastIndex + 1; i < index; ++i) {
             LOG_TOPIC(WARN, Logger::AGENCY) << "Missing index " << i << " in RAFT log.";
-            _log.push_back(log_t(i, term, buf, std::string()));
+            _log.emplace_back(log_t(i, term, buf, std::string()));
+            // This has empty clientId, so we do not need to adjust
+            // _clientIdLookupTable.
             lastIndex = i;
           }
           // After this loop, index will be lastIndex + 1
@@ -1041,17 +1063,9 @@ bool State::loadRemaining() {
 
         if (index == lastIndex + 1 || (index == lastIndex && _log.empty())) {
           // Real entries
-          try {
-            _log.push_back(log_t(basics::StringUtils::uint64(
-                                     ii.get(StaticStrings::KeyString).copyString()),
-                                 ii.get("term").getNumber<uint64_t>(), tmp, clientId));
-          } catch (std::exception const& e) {
-            LOG_TOPIC(ERR, Logger::AGENCY)
-                << "Failed to convert " + ii.get(StaticStrings::KeyString).copyString() +
-                       " to integer."
-                << e.what();
-          }
-
+          logEmplaceBackNoLock(
+            log_t(StringUtils::uint64(ii.get(StaticStrings::KeyString).copyString()),
+                  ii.get("term").getNumber<uint64_t>(), tmp, clientId));
           lastIndex = index;
         }
       }
@@ -1156,7 +1170,7 @@ bool State::compactVolatile(index_t cind, index_t keep) {
   index_t cut = cind - keep;
   MUTEX_LOCKER(mutexLocker, _logLock);
   if (!_log.empty() && cut > _cur && cut - _cur < _log.size()) {
-    _log.erase(_log.begin(), _log.begin() + (cut - _cur));
+    logEraseNoLock(_log.begin(), _log.begin() + (cut - _cur));
     TRI_ASSERT(_log.begin()->index == cut);
     _cur = _log.begin()->index;
   }
@@ -1324,6 +1338,7 @@ bool State::storeLogFromSnapshot(Store& snapshot, index_t index, term_t term) {
 
   // volatile logs
   _log.clear();
+  _clientIdLookupTable.clear();
   _cur = index;
   // This empty log should soon be rectified!
   return true;
@@ -1495,7 +1510,7 @@ std::shared_ptr<VPackBuilder> State::latestAgencyState(TRI_vocbase_t& vocbase,
     VPackSlice ii = result[0].resolveExternals();
     buffer_t tmp = std::make_shared<arangodb::velocypack::Buffer<uint8_t>>();
     store = ii;
-    index = arangodb::basics::StringUtils::uint64(ii.get("_key").copyString());
+    index = StringUtils::uint64(ii.get("_key").copyString());
     term = ii.get("term").getNumber<uint64_t>();
     LOG_TOPIC(INFO, Logger::AGENCY)
         << "Read snapshot at index " << index << " with term " << term;
@@ -1528,7 +1543,7 @@ std::shared_ptr<VPackBuilder> State::latestAgencyState(TRI_vocbase_t& vocbase,
         std::string clientId =
             req.hasKey("clientId") ? req.get("clientId").copyString() : std::string();
 
-        log_t entry(basics::StringUtils::uint64(ii.get(StaticStrings::KeyString).copyString()),
+        log_t entry(StringUtils::uint64(ii.get(StaticStrings::KeyString).copyString()),
                     ii.get("term").getNumber<uint64_t>(), tmp, clientId);
 
         if (entry.index <= index) {
