@@ -90,6 +90,19 @@ class State {
   /// @brief non-locking version of at
   log_t atNoLock(index_t) const;
 
+  /**
+   * @brief Erase element range from _log
+   * @param rbegin Start of range
+   * @param end    End of range
+   */
+  void logEraseNoLock(std::deque<log_t>::iterator rbegin, std::deque<log_t>::iterator rend);
+
+  /**
+   * @brief Emplace log entry at back
+   * @param l       log entry
+   */
+  void logEmplaceBackNoLock(log_t&& l);
+
  public:
   /// @brief Check for a log entry, returns 0, if the log does not
   /// contain an entry with index `index`, 1, if it does contain one
