@@ -21,8 +21,10 @@ v3.4.7 (2019-XX-XX)
 * fixed an edge case of handling `null` values in the AQL function `MIN` for input
   sequences that started with a `null` value. In this case, `null` was always returned as the
   minimum value even though other non-null values may have followed, and `MIN` was supposed
-  to return `null` only if there are no input values or all input values are `null`.
-
+  to return `null` only if there are no input values or all input
+  values are `null`.
+  
+* fix client id lookup table in agency
 
 v3.4.6 (2019-05-21)
 -------------------
